--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body{
     text-align: center;
 }
+
+label{
+    display: block;
+    padding-bottom: 1rem;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
