--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body{
     text-align: center;
+   
 }
 
 label{
-    display: block;
+    
     padding-bottom: 1rem;
+}
+
+input{
+    
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
