--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ button{
 #output{
     
     padding-top: 2rem;
-    font-size: 150%;
-  
-    display: inline;
+    font-size: 160%;
+  margin: auto;
+    
     border-radius: 1rem;
     
 }
